Fix buying process z-index, README

--- a/_scss/partials/_the-buying-process.scss
+++ b/_scss/partials/_the-buying-process.scss
@@ -5,12 +5,12 @@ $buying-bg-col: lighten($col-brand-grey-lt, 15);
   position: relative;
   padding-bottom: 80px;
   margin: 1em 0;
-  z-index: -5;
+  z-index: 1;
 }
 
 .buying__bubble {
   @include span-columns(3);
-  z-index: -5;
+  z-index: 2;
   background: $col-brand-blue-lt;
   border-radius: 1.0em;
   padding: 1em;
